# insider-daily

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  NOTES.md  README.md  TODO.md  compose.prod.yaml  compose.yaml  db.py  main.py  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 060b8d2a6cf3_create_companies_table.py  730ee2d4b122_create_company_table.py  7b96ae5e2b85_seed_companies.py  84142c5d5d59_generate_filings_and_transactions_table.py  ee8a2a3bc302_create_companies_table.py
app/: db.py  index.html  main.py  main_test.py  models.py  schemas.py  sec_edgar.py  services.py  services_test.py  ticker_enum.py  tools.ipynb  ui.py
app/companies/: companies.json  companies.py  raw_companies.json
app/models/: company.py
app/static/: mock.html  output.css
db/: password.txt.example
notebooks/: tools.ipynb
