[project]
name = "sec-daily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datastar-py>=0.8.0",
    "edgartools>=5.27.0",
    "fastapi>=0.135.2",
    "fastscheduler[all]>=0.2.1",
    "uvicorn[standard]>=0.42.0",
    "gunicorn>=23.0.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
]
