[project]
name = "insider-daily"
version = "0.1.0"
description = "Track insider trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datastar-py>=0.8.0",
    "edgartools>=5.27.0",
    "fastapi>=0.135.2",
    "fastscheduler[all]>=0.2.1",
    "uvicorn[standard]>=0.42.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "feedparser>=6.0.12",
    "apscheduler>=3.11.2",
    "sqlalchemy[asyncio]>=2.0.48",
]
